src/tests/InvalidTests/TestAttributes2.agl
cellSize : Number = 200;

Rectangle at (0,cellSize) with {
    length = (50,50);
    fill = "orangeaaaaa"; # erro. Não é uma cor existente no tkinter.
}
